--- a/index.html
+++ b/index.html
@@ -1932,19 +1932,16 @@
                     </div>
 
                     <div class="col-50 col-100-tablet __row-tablet">
-                      <p>Now Open / 開催中</p>
+                      <p>News / Updated: November 21, 2024</p>
 
                       <pre
                         class="___row"
-                      ><b>Featured 18: mono.kultur #50 MIKE MILLS: THE TENDER SPOT
-
-                      2024.10.22 (TUE) - 11.4 (SUN) 
-                      12:00-19:00 Closed on Mondays</b></pre>
+                      ><b>Production Design: The Last Dinner</b><br>Directed by Nguyen Duc Nhat <br></pre>
 
                       <pre class="__row">
-                      毎号、ひとりのクリエーターにじっくりとインタビューを行うベルリン発のカルチャー・マガジン「mono kultur」50号 ”MIKE MILLS: THE TENDER SPOT” の刊行を記念したフェアを開催いたします。
+                        This short film blends drama and horror, exploring generational conflict through the unsettling lens of technology. On the day of her mother’s memorial, Trang faces eerie revelations when her late mother’s spirit manifests via a voice simulation program. Inspired by The Babadook (2014), the film examines how technology can connect yet alienate, blurring the lines between reality and illusion。
 
-                      アメリカの映画監督、そしてデザイナー、アーティストとしても知られるマイク・ミルズを特集したmono.kultur #50を中心に、mono.kulturバックナンバーの展示販売のほか、マイク・ミルズ関連書籍や貴重なデッドストックの販売、過去のアートブックの一部も展示いたします。マイク・ミルズの人となりを知ることができる、スペシャルなインタビューとなります。ぜひお楽しみください。</pre
+                        As the production designer, I aimed to craft a haunting yet intimate atmosphere that amplifies the story’s tension and emotional depth。</pre
                       >
                     </div>
                   </div>
@@ -1975,14 +1972,15 @@
                     </div>
 
                     <div class="col-50 col-100-tablet __row-tablet">
-                      <p>NEWS/お知らせ</p>
+                      <p>News/ Updated: November 21, 2024</p>
 
                       <pre
                         class="___row"
-                      ><b>レターパックプラス郵便料金改定のお知らせ</b></pre>
+                      ><b>What Future Awaits Us?</b><br>Digital Mixed Media</pre>
+          
 
                       <pre class="__row">
-                      レターパックプラスの郵便料金が、2024.10.1より600円に改定されます。これに伴い、2024.10.1 以降の配送日になるご注文は、改定後の料金を頂戴いたします。ご理解のほど何卒よろしくお願いいたします。</pre
+                        This cyberpunk-inspired video reimagines Saigon’s iconic spirit in a futuristic world—neon skylines, hovering transports, and fluid architecture. It bridges my human experience with art and technology, continuing my exploration of hybrid media to honor tradition while envisioning new possibilities。</pre
                       >
                     </div>
                   </div>
@@ -2013,15 +2011,12 @@
                     </div>
 
                     <div class="col-50 col-100-tablet __row-tablet">
-                      <p>News / お知らせ</p>
+                      <p>News / Updated: December 14, 2023</p>
 
-                      <pre class="___row"><b>Wrapping Service</b></pre>
+                      <pre class="___row"><b>In the Blink of Eyes – Beyond the Blink of Life</b><br>A Photo Archive</pre>
 
                       <pre class="__row">
-                      ユトレヒトのオリジナルラッピングペーパーがニューカラーになりました。
-                      濃い目のブルーグレーのシックな色合いで、ユトレヒトのアイテムで戯れるユニークな動物たちが描かれた三宅瑠人によるデザインです。
-                      店頭、オンライン共に、ラッピングを無料で承っております。
-                      ご希望の場合は、ご注文時にメッセージ欄でお申し付けください。</pre
+                        This project explores how photos of lost loved ones nurture ongoing connections within families. As the creator, I examine how repetitive viewing transforms these images into rituals, reinforcing kinship and identity. Through this archive, I challenge Roland Barthes' concept of "flat death," instead showcasing how photos breathe life into memory and relationships。</pre
                       >
                     </div>
                   </div>
@@ -2263,7 +2258,7 @@
               </a>
 
              
-              <a href="/single-pages/color.html" class="col-md-3">
+              <a href="/single-pages/remember.html" class="col-md-3">
                 <div class="card product-card">
                   <div class="card-img">
                     <img
@@ -2278,7 +2273,7 @@
                     />
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title">Summer Days</h5>
+                    <h5 class="card-title">Remember Summer Days</h5>
                   </div>
                 </div>
               </a>
@@ -2298,7 +2293,7 @@
                     />
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title">Cat Under Different Sunlight</h5>
+                    <h5 class="card-title">Onsen Cat</h5>
                   </div>
                 </div>
               </a>
