--- a/single-pages/color.html
+++ b/single-pages/color.html
@@ -2423,7 +2423,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 107%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1223.JPG"
@@ -2438,7 +2438,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 107%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1224.jpg"
@@ -2453,7 +2453,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 107%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1225.jpg"
@@ -2468,7 +2468,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 107%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1226.jpg"
@@ -2483,7 +2483,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 107%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1227.jpg"
@@ -2498,7 +2498,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1230.jpg"
@@ -2513,7 +2513,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1231.jpg"
@@ -2528,7 +2528,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1232.JPG"
@@ -2543,7 +2543,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1233.JPG"
@@ -2558,7 +2558,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1234.jpg"
@@ -2573,7 +2573,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1235.JPG"
@@ -2588,7 +2588,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 144%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/color practice/IMG_1236.JPG"
@@ -2597,22 +2597,7 @@
                           />
                         </a>
                       </figure>
-                      <figure
-                        class="product-thumbnail image js-product-thumbnail"
-                        >
-                        <a
-                          href="#"
-                          class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
-                        >
-                          <img
-                            data-src="../assets/Painting & Drawinng/color practice/IMG_1228.JPG"
-                            alt="(signed) This Is Not What Thought / Yuri Hasegawa"
-                            class="lozad lozad-first preload-image"
-                          />
-                        </a>
-                      </figure>
-
+                     
 
                     </div>
                   </div>
@@ -2640,20 +2625,12 @@
                 class="_row text shopify-rich-editor js-fit-vids"
               >
                 <div>
-                  記憶の片隅にあるキャラクターや映画のヒーロー、現代アートやファッション、ミュージシャン、スポーツ選手にロゴマークetc…。家庭科的変貌を遂げた、長谷川有里による主に2019-2022年制作のぬいぐるみ作品を収録した3冊目の作品集。
+                  2024。
                 </div>
-                <div><br /></div>
-                <div><br /></div>
+                <div>Color study <br>
+                Study digital painting<br /></div>
                 <div>
-                  <meta charset="utf-8" />
-                  <span data-mce-fragment="1"
-                    >タイトルの通り”思っていたのと違う..."。だけど、その斜め上をいくユニークで愛おしい</span
-                  ><span data-mce-fragment="1">見覚えあるものたちを、</span
-                  >緩やかな関係性をジャンルを超えて有機的に繋ぎ、リズミカルに編集しました。同じキャラクターなのに、どれひとつとして同じではない、どれもが世界でひとつの尊いぬいぐるみであることも、長谷川有里ならではの作品です。またART
-                  BOOK FAIRだけでお披露目される"yurippe FUN BOOK
-                  SET"やTOYシリーズなど、手描きが施された箱物作品も収録されています。手頃な大きさと軽く柔らかな質感と手触りの、前2作と同じ仕様の判型なのでシリーズブックとしてもお楽しみいただけます。一人でも仲間とでも、答えあわせしながら楽しめるアートブック。贈り物にも◎。
-                </div>
-                <div>特典ステッカー付き。サイン入り。</div>
+                  March 2024.
                 <div><br /></div>
                 
               </div>
