--- a/single-pages/sculpture.html
+++ b/single-pages/sculpture.html
@@ -2343,7 +2343,7 @@
                     </figure>
                     <figure class="product-image js-product-image">
                         <img
-                        data-src="../assets\sculpture\.JPG"
+                        data-src="../assets\sculpture\5.JPG"
                         alt="(signed) This Is Not What Thought / Yuri Hasegawa"
                         class="lozad lozad-first preload-image"
                       />
@@ -2367,7 +2367,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 85%"
+                          style="padding-bottom: 58%"
                         >
                           <img
                             data-src="../assets\sculpture\1 + cover.JPG"
@@ -2382,7 +2382,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 105%"
+                          style="padding-bottom: 58%"
                         >
                           <img
                             data-src="../assets\sculpture\2.JPG"
@@ -2397,7 +2397,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-top: 20%"
+                          style="padding-bottom: 57%"
                         >
                           <img
                             data-src="../assets\sculpture\3.JPG"
@@ -2412,7 +2412,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 80%"
+                          style="padding-bottom: 75%"
                         >
                           <img
                             data-src="../assets\sculpture\4.JPG"
@@ -2427,7 +2427,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 85%"
+                          style="padding-bottom: 133%"
                         >
                           <img
                             data-src="../assets\sculpture\5.JPG"
