--- a/single-pages/still.html
+++ b/single-pages/still.html
@@ -2346,7 +2346,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 150%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/still life/IMG_CBACDB3BC4E0-1.jpeg"
@@ -2361,7 +2361,7 @@
                         <a
                           href="#"
                           class="carousel-nav js-carousel-nav image-container display-block"
-                          style="padding-bottom: 66.65714285714286%"
+                          style="padding-bottom: 120%"
                         >
                           <img
                             data-src="../assets/Painting & Drawinng/still life/IMG_E9996A40AB6B-1.jpeg"
