--- a/contact.html
+++ b/contact.html
@@ -1807,7 +1807,7 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital
+          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
         </p>
       </div>
 
@@ -1926,7 +1926,7 @@
                     >baongoctrng483@gmail.com</a
                   >
                 </p>
-                <p><strong>Phone:</strong> +123 456 789</p>
+                <p><strong>Phone:</strong> (+84) 918 057 591</p>
                 <p>
                   I am available for collaborations, freelance projects, and
                   inquiries related to my work.
@@ -1992,7 +1992,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
@@ -2001,10 +2001,10 @@
             </div>
           </div>
           <nav id="footer-nav" class="_row-tablet">
-            <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-            <p class="_row-sp">
-              <a href="#" data-modal="#modal-newsletter"
-                >Subscribe for updates on my project!</a
+           <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
+           <p>
+              <a href="mailto:baongoctrng483@gmail.com"
+                >Email me !</a
               >
             </p>
             <div class="_row footer-nav">
