--- a/films.html
+++ b/films.html
@@ -1904,7 +1904,7 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital
+          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
         </p>
       </div>
       <main id="main" role="main">
@@ -1916,7 +1916,7 @@
               <div class="card product-card">
                 <div class="card-img">
                   <img
-                    src="assets/Films/1. Production Design for The last dinner/1.png"
+                    src="assets/Films/1. Production Design for The Last Dinner/1.png"
                     class="img-fluid front-image"
                     alt="Product 1"
                   />
@@ -1928,7 +1928,7 @@
                 </div>
                 <div class="card-body text-center">
                   <h5 class="card-title">
-                    Production Design for The last dinner
+                    Production Design for The Last Dinner
                   </h5>
                 </div>
               </div>
@@ -1993,7 +1993,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
@@ -2002,10 +2002,10 @@
             </div>
           </div>
           <nav id="footer-nav" class="_row-tablet">
-            <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-            <p class="_row-sp">
-              <a href="#" data-modal="#modal-newsletter"
-                >Subscribe for updates on my project!</a
+           <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
+           <p>
+              <a href="mailto:baongoctrng483@gmail.com"
+                >Email me !</a
               >
             </p>
             <div class="_row footer-nav">
