--- a/single-pages/bLM.html
+++ b/single-pages/bLM.html
@@ -1981,7 +1981,7 @@
       >
         <p class="is-writing-mode-vertical">
           I, as an entity, cannot voice my human experience without the bridge
-          of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital
+          of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
         </p>
       </div>
       <main id="main" role="main">
@@ -2401,7 +2401,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
