--- a/mixed_media.html
+++ b/mixed_media.html
@@ -1905,7 +1905,7 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
+          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital..
         </p>
       </div>
       <main id="main" role="main">
@@ -1918,18 +1918,18 @@
               <div class="card product-card">
                 <div class="card-img">
                   <img
-                    src="assets/Mixed media & Others/photo/1.png"
+                    src="assets/Mixed media & Others/photo/2.png"
                     class="img-fluid front-image"
                     alt="Product 1"
                   />
                   <img
-                    src="assets/Mixed media & Others/photo/2.png"
+                    src="assets/Mixed media & Others/photo/3.png"
                     class="img-fluid back-image"
                     alt="Product 1 Hover"
                   />
                 </div>
                 <div class="card-body text-center">
-                  <h5 class="card-title">In the blink of eyes</h5>
+                  <h5 class="card-title">In The Blink Of Eyes - <br> Beyond The Blink Of Life</h5>
                 </div>
               </div>
             </a>
@@ -1938,7 +1938,7 @@
               <div class="card product-card">
                 <div class="card-img">
                   <img
-                    src="assets/Mixed media & Others/graphic novel/1.png"
+                    src="assets/Mixed media & Others/graphic novel/15.png"
                     class="img-fluid front-image"
                     alt="Product 1"
                   />
@@ -1980,7 +1980,7 @@
               <div class="card product-card">
                 <div class="card-img">
                   <img
-                    src="assets/Mixed media & Others/future/3.png"
+                    src="assets/Mixed media & Others/future/4.png"
                     class="img-fluid front-image"
                     alt="Product 1"
                   />
@@ -1991,7 +1991,7 @@
                   />
                 </div>
                 <div class="card-body text-center">
-                  <h5 class="card-title">What future awaits us</h5>
+                  <h5 class="card-title">WHAT FUTURE AWAITS US?</h5>
                 </div>
               </div>
             </a>
@@ -2015,7 +2015,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
@@ -2024,10 +2024,10 @@
             </div>
           </div>
           <nav id="footer-nav" class="_row-tablet">
-            <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-            <p class="_row-sp">
-              <a href="#" data-modal="#modal-newsletter"
-                >Subscribe for updates on my project!</a
+           <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
+           <p>
+              <a href="mailto:baongoctrng483@gmail.com"
+                >Email me !</a
               >
             </p>
             <div class="_row footer-nav">
