--- a/single-pages/future.html
+++ b/single-pages/future.html
@@ -1981,7 +1981,7 @@
       >
         <p class="is-writing-mode-vertical">
           I, as an entity, cannot voice my human experience without the bridge
-          of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital
+          of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
         </p>
       </div>
       <main id="main" role="main">
@@ -2415,7 +2415,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
@@ -2427,9 +2427,9 @@
             <div class="_row hide-tablet show-sp">
               <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
             </div>
-            <p class="_row-sp">
-              <a href="#" data-modal="#modal-newsletter"
-                >Subscribe for updates on my project!</a
+           <p>
+              <a href="mailto:baongoctrng483@gmail.com"
+                >baongoctrng483@gmail.com</a
               >
             </p>
             <div class="_row footer-nav">
