--- a/single-pages/graphite.html
+++ b/single-pages/graphite.html
@@ -1990,7 +1990,7 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital
+          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
         </p>
       </div>
       <main id="main" role="main">
@@ -1999,7 +1999,7 @@
             itemprop="name"
             content="(signed) This Is Not What Thought / Yuri Hasegawa"
           />
-          <meta
+          <met
             itemprop="url"
             content="https://utrecht.jp/products/this-is-not-what-thought-yuri-hasegawa"
           />
@@ -2517,7 +2517,7 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-
+<br><br><br><br><br><br>
                 <div class="logo _row">
                   <img src="/assets/newl.png" alt="" />
                 </div>
@@ -2527,9 +2527,9 @@
           </div>
           <nav id="footer-nav" class="_row-tablet">
             <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-            <p class="_row-sp">
-              <a href="#" data-modal="#modal-newsletter"
-                >Subscribe for updates on my project!</a
+           <p>
+              <a href="mailto:baongoctrng483@gmail.com"
+                >Email me !</a
               >
             </p>
             <div class="_row footer-nav">
