--- a/contact.html
+++ b/contact.html
@@ -1673,7 +1673,12 @@
               <a href="https://www.instagram.com/baongoctr.ng/">Instagram</a>
             </p>
 
-            <p><a href="https://www.behance.net/baongotranng1?tracking_source=search_projects%7C+photo+essay">Behance</a></p>
+            <p>
+              <a
+                href="https://www.behance.net/baongotranng1?tracking_source=search_projects%7C+photo+essay"
+                >Behance</a
+              >
+            </p>
           </div>
         </nav>
         <style>
@@ -1807,7 +1812,10 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
+          I, as an entity, cannot voice my human experience without the bridge
+          of Art and Technology.<br />My past works reflect a journey of
+          discovery and experimentation, exploring various materials and
+          media—both physical and digital.
         </p>
       </div>
 
@@ -1987,61 +1995,93 @@
             <div class="flex-container grid-container-tablet is-break-sp">
               <div class="col-100 col-50-tablet col-100-sp">
                 <div
-                   class="image-container"
+                  class="image-container"
                   style="padding-bottom: 66.66666666666666%"
                 >
-                   <img src="/assets/face.png" alt="" />
+                  <img src="/assets/face.png" alt="" />
                 </div>
-<br><br><br>
+                <br /><br /><br />
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 25px;" />
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
           <nav id="footer-nav" class="_row-tablet">
-           <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-           <p>
-              <a href="mailto:baongoctrng483@gmail.com"
-                >Email me !</a
-              >
+            <div class="_row hide-tablet show-sp">
+              <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
+            </div>
+            <p>
+              <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row">
+                <hr
+                  style="
+                    height: 3px;
+                    background-color: #fff;
+                    opacity: 1;
+                    margin-left: -25px;
+                  "
+                />
+              </div>
 
               <div class="_row">
-                <p style="color: white;"><b>Pages</b></p>
+                <p style="color: white"><b>Pages</b></p>
                 <div
                   class="_row flex-container _grid-container is-grid-small-bottom"
                 >
                   <p>
-                    <a href="/index.html" style="font-weight: 600;">Home</a>
+                    <a href="/index.html" style="font-weight: 600">Home</a>
                   </p>
 
-                  <p><a href="/about.html" style="font-weight: 600;">About</a></p>
+                  <p>
+                    <a href="/about.html" style="font-weight: 600">About</a>
+                  </p>
 
                   <p>
-                    <a href="/contact.html" style="font-weight: 600;">Contact</a>
+                    <a href="/contact.html" style="font-weight: 600">Contact</a>
                   </p>
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row">
+                <hr
+                  style="
+                    height: 3px;
+                    background-color: #fff;
+                    opacity: 1;
+                    margin-left: -25px;
+                  "
+                />
+              </div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
                   class="_row flex-container _grid-container is-grid-small-bottom"
                 >
                   <p>
-                    <a href="/engineering_project.html" style="font-weight: 600;">Engineering Projects</a>
+                    <a href="/engineering_project.html" style="font-weight: 600"
+                      >Engineering Projects</a
+                    >
                   </p>
 
-                  <p><a href="/films.html" style="font-weight: 600;">Films</a></p>
+                  <p>
+                    <a href="/films.html" style="font-weight: 600">Films</a>
+                  </p>
 
-                  <p><a href="/mixed_media.html" style="font-weight: 600;">Mixed Media & Others</a></p>
+                  <p>
+                    <a href="/mixed_media.html" style="font-weight: 600"
+                      >Mixed Media & Others</a
+                    >
+                  </p>
 
-                  <p><a href="/painting_drawing.html" style="font-weight: 600;">Painting & Drawing</a></p>
+                  <p>
+                    <a href="/painting_drawing.html" style="font-weight: 600"
+                      >Painting & Drawing</a
+                    >
+                  </p>
                 </div>
               </div>
             </div>
@@ -2100,7 +2140,10 @@
       <div class="js-modal-container modal-container">
         <div class="modal-content">
           <p>
-            Want to see the latest works, exhibitions, and behind-the-scenes of my creative process? Subscribe to receive exclusive updates and news about my art directly to your inbox. Be part of the journey – stay informed and inspired!
+            Want to see the latest works, exhibitions, and behind-the-scenes of
+            my creative process? Subscribe to receive exclusive updates and news
+            about my art directly to your inbox. Be part of the journey – stay
+            informed and inspired!
           </p>
 
           <div class="_row image uiimage-newsletter">
