--- a/single-pages/jerry.html
+++ b/single-pages/jerry.html
@@ -2455,9 +2455,9 @@
                 </div>
 <br><br><br>
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 25px;"/>
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
@@ -2469,7 +2469,7 @@
               >
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2488,7 +2488,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
