--- a/single-pages/sculpture.html
+++ b/single-pages/sculpture.html
@@ -2539,9 +2539,9 @@
                 </div>
 <br><br><br>
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" style="margin-top: 20px;" alt="" />
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
@@ -2552,8 +2552,8 @@
                 >Email me !</a
               >
             </p>
-            <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+           <div class="_row footer-nav">
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2572,7 +2572,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
