--- a/engineering_project.html
+++ b/engineering_project.html
@@ -1642,7 +1642,7 @@
     <header
       id="header"
       class="flex-container is-flex-wrap-nowrap is-align-items-center-tablet"
-      >
+    >
       <h1
         id="site-identity"
         itemscope
@@ -1678,7 +1678,12 @@
               <a href="https://www.instagram.com/baongoctr.ng/">Instagram</a>
             </p>
 
-            <p><a href="https://www.behance.net/baongotranng1?tracking_source=search_projects%7C+photo+essay">Behance</a></p>
+            <p>
+              <a
+                href="https://www.behance.net/baongotranng1?tracking_source=search_projects%7C+photo+essay"
+                >Behance</a
+              >
+            </p>
           </div>
         </nav>
         <style>
@@ -1688,7 +1693,7 @@
             opacity: 1;
             transition: opacity 0.5s ease; /* Smooth transition for opacity change */
           }
-        
+
           /* Media query for screens 700px and below */
           @media (max-width: 700px) {
             .custom-hr {
@@ -1905,7 +1910,10 @@
         class="hide-tablet flex-container is-justify-content-center"
       >
         <p class="is-writing-mode-vertical">
-          I, as an entity, cannot voice my human experience without the bridge of Art and Technology.<br />My past works reflect a journey of discovery and experimentation, exploring various materials and media—both physical and digital.
+          I, as an entity, cannot voice my human experience without the bridge
+          of Art and Technology.<br />My past works reflect a journey of
+          discovery and experimentation, exploring various materials and
+          media—both physical and digital.
         </p>
       </div>
       <main id="main" role="main">
@@ -1913,8 +1921,6 @@
         <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
         <div class="container my-5">
           <div class="row">
-           
-
             <a href="single-pages/jerry.html" class="col-md-3">
               <div class="card product-card">
                 <div class="card-img">
@@ -1930,7 +1936,7 @@
                   />
                 </div>
                 <div class="card-body text-center">
-                  <h5 class="card-title">Jerry In Bathtub Interactive Toy </h5>
+                  <h5 class="card-title">Jerry In Bathtub Interactive Toy</h5>
                 </div>
               </div>
             </a>
@@ -1979,7 +1985,7 @@
         </div>
       </main>
     </div>
-    <footer id="footer" style="width: 110% !important;" class="row">
+    <footer id="footer" style="width: 110% !important" class="row">
       <div class="footer-wrapper">
         <div class="flex-container is-break-tablet">
           <div id="footer-storeinfo">
@@ -1991,56 +1997,88 @@
                 >
                   <img src="/assets/face.png" alt="" />
                 </div>
-<br><br><br>
+                <br /><br /><br />
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
           <nav id="footer-nav" class="_row-tablet">
-           <div class="_row hide-tablet show-sp"><hr style="height: 1px; background-color: #04bf6a; opacity: 1" /></div>
-           <p>
-              <a href="mailto:baongoctrng483@gmail.com"
-                >Email me !</a
-              >
+            <div class="_row hide-tablet show-sp">
+              <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
+            </div>
+            <p>
+              <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row">
+                <hr
+                  style="
+                    height: 3px;
+                    background-color: #fff;
+                    opacity: 1;
+                    margin-left: -25px;
+                  "
+                />
+              </div>
 
               <div class="_row">
-                <p style="color: white;"><b>Pages</b></p>
+                <p style="color: white"><b>Pages</b></p>
                 <div
                   class="_row flex-container _grid-container is-grid-small-bottom"
                 >
                   <p>
-                    <a href="/index.html" style="font-weight: 600;">Home</a>
+                    <a href="/index.html" style="font-weight: 600">Home</a>
                   </p>
 
-                  <p><a href="/about.html" style="font-weight: 600;">About</a></p>
+                  <p>
+                    <a href="/about.html" style="font-weight: 600">About</a>
+                  </p>
 
                   <p>
-                    <a href="/contact.html" style="font-weight: 600;">Contact</a>
+                    <a href="/contact.html" style="font-weight: 600">Contact</a>
                   </p>
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row">
+                <hr
+                  style="
+                    height: 3px;
+                    background-color: #fff;
+                    opacity: 1;
+                    margin-left: -25px;
+                  "
+                />
+              </div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
                   class="_row flex-container _grid-container is-grid-small-bottom"
                 >
                   <p>
-                    <a href="/engineering_project.html" style="font-weight: 600;">Engineering Projects</a>
+                    <a href="/engineering_project.html" style="font-weight: 600"
+                      >Engineering Projects</a
+                    >
                   </p>
 
-                  <p><a href="/films.html" style="font-weight: 600;">Films</a></p>
+                  <p>
+                    <a href="/films.html" style="font-weight: 600">Films</a>
+                  </p>
 
-                  <p><a href="/mixed_media.html" style="font-weight: 600;">Mixed Media & Others</a></p>
+                  <p>
+                    <a href="/mixed_media.html" style="font-weight: 600"
+                      >Mixed Media & Others</a
+                    >
+                  </p>
 
-                  <p><a href="/painting_drawing.html" style="font-weight: 600;">Painting & Drawing</a></p>
+                  <p>
+                    <a href="/painting_drawing.html" style="font-weight: 600"
+                      >Painting & Drawing</a
+                    >
+                  </p>
                 </div>
               </div>
             </div>
@@ -2099,7 +2137,10 @@
       <div class="js-modal-container modal-container">
         <div class="modal-content">
           <p>
-            Want to see the latest works, exhibitions, and behind-the-scenes of my creative process? Subscribe to receive exclusive updates and news about my art directly to your inbox. Be part of the journey – stay informed and inspired!
+            Want to see the latest works, exhibitions, and behind-the-scenes of
+            my creative process? Subscribe to receive exclusive updates and news
+            about my art directly to your inbox. Be part of the journey – stay
+            informed and inspired!
           </p>
 
           <div class="_row image uiimage-newsletter">
