--- a/films.html
+++ b/films.html
@@ -1989,15 +1989,15 @@
               <div class="col-100 col-50-tablet col-100-sp classMinus">
                 <div
                   class="image-container"
-                  style="padding-bottom: 66.66666666666666% ;"
+                  style="padding-bottom: 90% ; "
                 >
-                  <img src="/assets/face.png" alt="" />
+                   <img src="/assets/face.png" alt="" />
                 </div>
-<br><br><br>
+
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 25px;"/>
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
@@ -2008,8 +2008,8 @@
                 >Email me !</a
               >
             </p>
-            <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+           <div class="_row footer-nav">
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2028,7 +2028,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
