--- a/single-pages/Babamu.html
+++ b/single-pages/Babamu.html
@@ -2406,9 +2406,9 @@
                 </div>
 <br><br><br>
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
@@ -2425,7 +2425,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 1px;
+                    height: 3px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2455,7 +2455,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 1px;
+                    height: 3px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
