--- a/single-pages/bLM.html
+++ b/single-pages/bLM.html
@@ -2403,9 +2403,9 @@
                 </div>
 <br><br><br>
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;" />
                 </div>
-                <p class="__row textalign-center">Bao Ngoc</p>
+                <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
             </div>
           </div>
