--- a/single-pages/films.html
+++ b/single-pages/films.html
@@ -1943,7 +1943,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                   placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2584,7 +2584,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2614,7 +2614,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
