--- a/contact.html
+++ b/contact.html
@@ -1776,7 +1776,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                   placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2016,7 +2016,7 @@
               <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2037,7 +2037,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
