--- a/single-pages/bLM.html
+++ b/single-pages/bLM.html
@@ -1943,7 +1943,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                   placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2418,11 +2418,11 @@
                 >Receive news</a
               >
             </p>
-            <div class="_row footer-nav">
+           <div class="_row footer-nav">
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2452,7 +2452,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
