--- a/single-pages/cat.html
+++ b/single-pages/cat.html
@@ -1951,7 +1951,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                   placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2489,7 +2489,7 @@
               >
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 1px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2508,7 +2508,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
