--- a/single-pages/still.html
+++ b/single-pages/still.html
@@ -1819,7 +1819,7 @@
         itemtype="http://schema.org/Organization"
       >
         <a href="/">
-          <img src="/assets/imgs/logo black.png" alt="" />
+          <img src="/assets/imgs/logo no bg.png" alt="" />
         </a>
       </h1>
       <div id="nav-container">
@@ -1951,7 +1951,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                    placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2444,8 +2444,8 @@
                 >Email me !</a
               >
             </p>
-            <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+             <div class="_row footer-nav">
+              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2464,7 +2464,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 3px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
