--- a/single-pages/zorn.html
+++ b/single-pages/zorn.html
@@ -1944,7 +1944,7 @@
                     type="search"
                     id="inputsearch"
                     class="form-input"
-                    placeholder="検索 / Type something"
+                   placeholder="Type something"
                     autocomplete="off"
                   />
                 </p>
@@ -2401,11 +2401,11 @@
                 >baongoctrng483@gmail.com</a
               >
             </p>
-            <div class="_row footer-nav">
+           <div class="_row footer-nav">
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2435,7 +2435,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 3px;
+                    height: 2px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
