--- a/single-pages/cat.html
+++ b/single-pages/cat.html
@@ -14,7 +14,7 @@
       href="//utrecht.jp/cdn/shop/t/1/assets/site.webmanifest?v=139680987821163668591543062320"
     />
 
-    <title>(signed) This Is Not What Thought / Yuri Hasegawa - Utrecht</title>
+    <title>Maneki Robot Pet</title>
     <meta
       name="description"
       content='記憶の片隅にあるキャラクターや映画のヒーロー、現代アートやファッション、ミュージシャン、スポーツ選手にロゴマークetc…。家庭科的変貌を遂げた、長谷川有里による主に2019-2022年制作のぬいぐるみ作品を収録した3冊目の作品集。 タイトルの通り”思っていたのと違う..."。だけど、その斜め上をいくユニークで愛おしい見覚えあるものたちを、緩やかな関係性をジャンルを超えて有機的に繋ぎ、リズミカルに編集しました。同じキャラクターなのに、どれひとつとして同じではない、どれもが世界でひとつの尊いぬいぐるみであることも、長谷川有里ならではの作品です。またART BOOK FAIRだけでお披露目される"yurippe FUN BOOK SET"'
@@ -2443,7 +2443,7 @@
                 <div>
                   2024
                 </div>
-                <div>Maneki robot pet<br />Prototype Of An Interactive Emotional Support Robot Pet</div>
+                <div>Maneki Robot Pet<br />Prototype Of An Interactive Emotional Support Robot Pet</div>
                 <div>Maneki is a prototype of an innovative emotional support robot designed for individuals living alone, drawing inspiration from the beloved Maneki-Neko, or “beckoning cat.” This comforting companion aims to provide emotional solace through its soft, huggable form and interactive features. By combining a cute, approachable design with smart technology, Maneki addresses the emotional needs of users who seek companionship without the commitment of a real pet.<br /></div>
                 <div>The design process involved extensive ideation, including sketches to explore various geometric forms. We settled on an organic droplet shape to evoke warmth and comfort. Key features include sound recognition, body position detection, and an expressive face display screen, enabling empathetic responses to user emotions.<br /></div>
                 <div><br>Credit: Nguyen Quoc An, Le Khanh Thu</div>
