--- a/single-pages/future.html
+++ b/single-pages/future.html
@@ -19,7 +19,7 @@
       href="//utrecht.jp/cdn/shop/t/1/assets/site.webmanifest?v=139680987821163668591543062320"
     />
 
-    <title>(signed) This Is Not What Thought / Yuri Hasegawa - Utrecht</title>
+    <title>WHAT FUTURE AWAITS US?</title>
     <meta name="description" content="" />
 
     <meta property="og:site_name" content="Utrecht" />
