--- a/single-pages/still.html
+++ b/single-pages/still.html
@@ -14,7 +14,7 @@
       href="//utrecht.jp/cdn/shop/t/1/assets/site.webmanifest?v=139680987821163668591543062320"
     />
 
-    <title>(signed) This Is Not What Thought / Yuri Hasegawa - Utrecht</title>
+    <title>Still Life 3</title>
     <meta
       name="description"
       content='記憶の片隅にあるキャラクターや映画のヒーロー、現代アートやファッション、ミュージシャン、スポーツ選手にロゴマークetc…。家庭科的変貌を遂げた、長谷川有里による主に2019-2022年制作のぬいぐるみ作品を収録した3冊目の作品集。 タイトルの通り”思っていたのと違う..."。だけど、その斜め上をいくユニークで愛おしい見覚えあるものたちを、緩やかな関係性をジャンルを超えて有機的に繋ぎ、リズミカルに編集しました。同じキャラクターなのに、どれひとつとして同じではない、どれもが世界でひとつの尊いぬいぐるみであることも、長谷川有里ならではの作品です。またART BOOK FAIRだけでお披露目される"yurippe FUN BOOK SET"'
