--- a/single-pages/stilllife2.html
+++ b/single-pages/stilllife2.html
@@ -20,7 +20,7 @@
       href="//utrecht.jp/cdn/shop/t/1/assets/site.webmanifest?v=139680987821163668591543062320"
     />
 
-    <title>(signed) This Is Not What Thought / Yuri Hasegawa - Utrecht</title>
+    <title>Still Life 2</title>
     <meta name="description" content="" />
 
     <meta property="og:site_name" content="Utrecht" />
